# camera-imu-calibrate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: IccCalibrator.hpp  IccDatasetReaders.hpp  IccPlots.hpp  IccSensors.hpp  IccUtils.hpp  KalibrCommon.hpp  camera_cmd.hpp  format_utils.hpp  imu_camera_cmd.hpp  math_utils.hpp
include/kalibr_backend/: MatrixDesignVariable.hpp  ScalarDesignVariable.hpp  TransformationDesignVariable.hpp
include/kalibr_camera_calibration/: CameraCalibrator.hpp  CameraInitializers.hpp  CameraUtils.hpp  MulticamGraph.hpp  ObsDb.hpp
include/kalibr_common/: ConfigReader.hpp  ImageDatasetReader.hpp  ImuDatasetReader.hpp
include/kalibr_imu_camera_calibration/: IccCalibrator.hpp  IccPlots.hpp  IccSensors.hpp
script/: extract_from_ros1_bag.py
src/: AccelerometerError.cpp  ConfigReader.cpp  EuclideanError.cpp  GyroscopeError.cpp  IccCalibrator.cpp  IccDatasetReaders.cpp  IccPlots.cpp  IccSensors.cpp  IccUtils.cpp  ImageDatasetReader.cpp  ImuDatasetReader.cpp  KalibrCommon.cpp  MatrixDesignVariable.cpp  ScalarDesignVariable.cpp  TargetExtractor.cpp  TransformationDesignVariable.cpp  camera_cmd.cpp  imu_camera_cmd.cpp  main.cpp  test_readers.cpp
src/kalibr_backend/: TransformationDesignVariable.cpp
src/kalibr_camera_calibration/: CameraCalibrator.cpp  CameraInitializers.cpp  CameraUtils.cpp  MulticamGraph.cpp  ObsDb.cpp
src/kalibr_common/: ConfigReader.cpp  ImageDatasetReader.cpp  ImuDatasetReader.cpp  TargetExtractor.cpp
src/kalibr_errorterms/: EuclideanError.cpp  (+2 more)
tests/: CMakeLists.txt
(+6 files in other folders)
